test:webpack install and test import 웹팩 설치 후 EMS module 테스트

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "todo-6조 양명우, 김영지",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
