--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/woowa-techcamp-2020/todo-6#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "scss-loader": "0.0.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^4.3.0"
   }
 }
