--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "lint": "tslint --project \"tsconfig.json\"",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json"
+    "test": "nodemon --config ./spec/nodemon.json",
+    "front-test": "node build.js &&  webpack && node -r module-alias/register ./dist --env=production",
+    "build-webpack": "webpack"
   },
   "nodemonConfig": {
     "watch": [
@@ -31,12 +33,15 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^3.23.3",
+    "html-webpack-plugin": "^4.3.0",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
@@ -47,15 +52,31 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.23",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "file-loader": "^6.0.0",
     "find": "^0.3.0",
     "fs-extra": "^9.0.1",
     "jasmine": "^3.5.0",
     "jsonfile": "^6.0.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "supertest": "^4.0.2",
+    "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
