--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json",
     "front-test": "node build.js &&  webpack && node -r module-alias/register ./dist --env=production",
-    "build-webpack": "webpack"
+    "build-webpack": "webpack --watch"
   },
   "nodemonConfig": {
     "watch": [
