--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "lint": "tslint --project \"tsconfig.json\"",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
+    "start:db": "nodemon --db=real",
     "test": "nodemon --config ./spec/nodemon.json",
     "front-test": "node build.js &&  webpack && node -r module-alias/register ./dist --env=production",
     "build-webpack": "webpack --watch"
@@ -37,6 +38,8 @@
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/jasmine": "^3.5.11",
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.1",
+    "@types/mysql2": "github:types/mysql2#semver:^1.0.0",
     "@types/node": "^14.0.23",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
