feature: 모든 정보 가져오기 위한 join 실행

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
     "start:db": "nodemon --db=real",
-    "test": "nodemon --config ./spec/nodemon.json",
+    "test": "nodemon --config ./spec/nodemon.json --db=real",
     "front-test": "node build.js &&  webpack && node -r module-alias/register ./dist --env=production",
     "build-webpack": "webpack --watch"
   },
