--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -24,6 +24,9 @@
       ],
       "@server": [
         "src/Server"
+      ],
+      "@type": [
+        "src/type"
       ]
     },
     "types": [
