--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -7,6 +7,7 @@
         "browser": true,
         "commonjs": true
     },
+    "parser": "babel-eslint",
     "extends": "airbnb-base",
     "plugins": [ "import", "html" ],
     "rules": {
