--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
