--- a/server/tsconfig.prod.json
+++ b/server/tsconfig.prod.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "spec",
